<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain"
    tools:context=".MeetUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="10sp"/>

            <EditText
                android:id="@+id/et_m_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <EditText
                android:id="@+id/et_m_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_m_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Time"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"/>
            <TextView
                android:id="@+id/tv_m_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <EditText
                android:id="@+id/et_m_remarks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textLongMessage"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/remarks"
                android:textColorHint="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5sp">
            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:text="Send"
                android:elevation="5sp"
                android:background="@drawable/btn_login"
                android:textColor="@color/white"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>