<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="100sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:background="@drawable/text_input_background"
                android:padding="12sp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/phone_no2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:padding="12sp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:background="@drawable/text_input_background"
                android:hint="@string/phone_numder"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password_new_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:padding="12sp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:background="@drawable/text_input_background"
                android:hint="@string/new_password"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/password_confirm_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:padding="12sp"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:background="@drawable/text_input_background"
                android:hint="@string/confirm_password"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"
                android:background="@drawable/btn_login"
                android:elevation="10sp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/signUp_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>